--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,62 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
+body{
+    background: url(/images/bluebg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 .container{
     width: 100%;
     height: 100vh;
-    background: url(/images/bluebg.jpg);
-   background-size: cover;
-   background-repeat: no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.calculator{
+    background: rgba(247, 242, 236, 0.5);
+    backdrop-filter: blur(12px);   
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow:  4px 4px 8px rgba(0, 0, 0, 0.3),  
+    -4px -4px 8px rgba(255, 255, 255, 0.30), 
+    inset 1px 1px 2px rgba(255, 255, 255, 0.2), 
+    inset -1px -1px 2px rgba(209, 217, 230, 0.15);
+}
+
+.calculator form input{
+    border: 0;
+    outline: 0; 
+    background: transparent;
+    width: 60px;
+    height: 60px;
+   
+    border-radius: 10px;
+    box-shadow:  4px 4px 8px rgba(0, 0, 0, 0.3),  
+    -4px -4px 8px rgba(255, 255, 255, 0.30), 
+    inset 1px 1px 2px rgba(255, 255, 255, 0.2), 
+    inset -1px -1px 2px rgba(209, 217, 230, 0.15); 
+    font-size: 20px;
+    color: black;
+    cursor: pointer;
+    margin: 5px;
+}
+
+form .display{
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px 0;
+}
+
+form .display input{
+    text-align: right;
+    flex: 1;
+    font-size: 45px;
+    padding: 20px;
+    box-shadow:
+    0 6px 8px rgba(0, 0, 0, 0.3),      
+}
+form input.equal{
+    width: 136px;
 }
